Fix PR review findings from GitHub PR #46
Critical fixes:
- Fix HashMap.newHashMap() compilation error in SubmapGenerator
- Fix email generation bug where TLDS.next() was called twice

Improvements:
- Replace manual blank checks with String.isBlank() for better readability
- Replace manual list population loops with forEach(list::add) for conciseness

All tests pass and build is successful.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>