@@ -70,13 +70,15 @@ public class EmailGenerator implements TypedGenerator<String> {
      * Returns "invalid.email@example.com" if either name component is null or empty.
      */
     public static String createEmail(final String firstname, final String lastname) {
-        if (firstname == null || firstname.trim().isEmpty() || lastname == null || lastname.trim().isEmpty()) {
+        if (firstname == null || firstname.isBlank() || lastname == null || lastname.isBlank()) {
             LOGGER.log(Level.WARNING, "Invalid name components for email generation: firstname=''{0}'', lastname=''{1}''", new Object[]{firstname, lastname});
             return "invalid.email@example.com";
         }
+        var tld = TLDS.next();
         var email = (firstname + "." + lastname + "@" + DOMAINS.next()).toLowerCase();
-        LOGGER.log(Level.FINE, "Generated email: {0}", email + '.' + TLDS.next());
-        return email + '.' + TLDS.next();
+        var fullEmail = email + '.' + tld;
+        LOGGER.log(Level.FINE, "Generated email: {0}", fullEmail);
+        return fullEmail;
     }
 
 }
